--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.57.0"
   },
   "devDependencies": {
